--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,11 @@
     <groupId>org.codehaus.mojo</groupId>
     <artifactId>cobertura-maven-plugin</artifactId>
     <version>2.7</version>
-   
+   <configuration>  
+                    <formats>  
+                        <format>xml</format>  
+                    </formats>  
+                </configuration>
 </dependency>
 
 	</dependencies>
